2003-04-21  Paul Eggert  <eggert@twinsun.com>

	* error.m4 (gl_ERROR): Do not put under dynamic conditions some
	code which expansion is under static control.  Patch imported from
	Akim Demaille's patch to Bison; see
	<http://mail.gnu.org/archive/html/bison-patches/2003-03/msg00057.html>.

2003-04-14  Bruno Haible  <bruno@clisp.org>

	* error.m4 (jm_PREREQ_ERROR): Use AC_FUNC_VPRINTF.

2003-04-10  Bruno Haible  <bruno@clisp.org>

	* findprog.m4: New file.
	* eaccess.m4: New file.

2003-04-04  Bruno Haible  <bruno@clisp.org>

	* linebreak.m4: New file.

2003-04-03  Bruno Haible  <bruno@clisp.org>

	* utf-ucs4.m4: New file.
	* ucs4-utf.m4: New file.

2003-03-30  Bruno Haible  <bruno@clisp.org>

	* copy-file.m4 (gl_COPY_FILE): Add check for chown().

2003-03-28  Bruno Haible  <bruno@clisp.org>

	* copy-file.m4: New file.

2003-03-18  Bruno Haible  <bruno@clisp.org>

	* onceonly.m4: Use m4_defn instead of defn, for better error checking.
	* onceonly_2_57.m4: Likewise.

2003-03-17  Bruno Haible  <bruno@clisp.org>

	* onceonly.m4: Require autoconf 2.54 or newer.
	(m4_quote): Remove macro.
	* onceonly_2_57.m4: Require autoconf 2.54 or newer.

2003-03-14  Bruno Haible  <bruno@clisp.org>

	* onceonly_2_57.m4 (AC_CHECK_HEADERS_ONCE, AC_CHECK_FUNCS_ONCE,
	AC_CHECK_DECLS_ONCE): Quote AC_FOREACH variable-expansions properly.

2003-03-13  Paul Eggert  <eggert@twinsun.com>

	* onceonly.m4 (m4_quote): New macro.
	(AC_CHECK_HEADERS_ONCE, AC_CHECK_FUNCS_ONCE, AC_CHECK_DECLS_ONCE):
	Quote AC_FOREACH variable-expansions properly.

2003-02-19  Paolo Bonzini  <bonzini@gnu.org>

	* poll.m4: New file.

2003-02-18  Paolo Bonzini  <bonzini@gnu.org>

	* mathl.m4: New file.

2003-02-17  Bruno Haible  <bruno@clisp.org>

	* mkdtemp.m4: New file, from GNU gettext with modifications.

2003-02-02  Jim Meyering  <jim@meyering.net>

	* regex.m4 (jm_INCLUDED_REGEX): Detect broken re_search in
	e.g. glibc-2.2.93.

2003-01-31  Bruno Haible  <bruno@clisp.org>
